    order to preprocess the use_module/2 directive, converting the module file
    name into the module name.

    Updated the SWI-Prolog and YAP config files in order to preprocess the
    reexport/2 module directive, converting the module file name into the
    module name.

    Added support for parsing use_module/3 directives to the SICStus Prolog
    config files.

    Replaced the predicate as_dictionary/2 in the library object "bintree"
    with a new implementation, contributed by Paul Fodor, that returns a
    semi-balanced tree.

    Updated the "examples/tester.sh" script in order to report an error when
    the default Prolog back-end compiler is not found. Thanks to Parker Jones
    for the bug report.

    Updated the "encodings" example unit test loader file to correctly detect
    back-end Prolog compilers supporting the encoding/1 directive.


2.39.1 - March 31, 2010

    Updated the Logtalk compiler and runtime to support calls to the built-in
    predicates threaded_peek/2 and threaded_exit/2 where the second argument
    (thread tag) is only instantiated at runtime. Updated the exception term
    thrown by threaded_exit/2 when the thread goal don't exist to use error/3
    instead of error/2.

    Updated the implementation of the uses/2 directive in order to allow
    safe use of the declared shortcuts at runtime.

    Corrected a bug when using the use_module/2 directive that resulted in
    a performance penalty when calling module predicates.

    Updated the Logtalk compiler to warn the user when finding deprecated
    directives.

    Updated the Logtalk compiler to recognize "prolog_compatible_version"
    and "tabling" as valid flags.

    Updated the Logtalk compiler to compile settings files with the compiler
    flag "altdirs" turned off in order to avoid problems with directory
    permissions for back-end Prolog compilers, such as Ciao and XSB, which
    require the first run of Logtalk to be made by an administrative user.
