@@ -572,20 +572,14 @@ forall(Generate, Test) :-
 
 '$lgt_rewrite_and_recompile_pl_directive'(use_module(File, Imports), use_module(Module, Imports)) :-
 	nonvar(File),
-	(	File = library(Module) ->
-		true
-	;	atom(File) ->
-		File = Module
-	).
+	absolute_file_name(File, Path, [extensions(['.pl', '.pro'])]),
+	current_module(Module, Path).	% this only succeedds for already loaded modules
 
 '$lgt_rewrite_and_recompile_pl_directive'(use_module(File), use_module(Module, Imports)) :-
 	nonvar(File),
-	(	File = library(Module) ->
-		true
-	;	atom(File) ->
-		File = Module
-	),
-	setof(				% this only succeedds for already loaded modules
+	absolute_file_name(File, Path, [extensions(['.pl', '.pro'])]),
+	current_module(Module, Path),	% this only succeedds for already loaded modules
+	setof(
 		Functor/Arity,
 		Predicate^(predicate_property(Module:Predicate, exported), functor(Predicate, Functor, Arity)),
 		Imports).
