@@ -39,7 +39,8 @@ RELEASE NOTES
     module name.
 
     Added support for parsing use_module/3 directives to the SICStus Prolog
-    config files.
+    config files. Improved finding the module name from the module file name
+    when preprocessing the directives use_module/1-2.
 
     Replaced the predicate as_dictionary/2 in the library object "bintree"
     with a new implementation, contributed by Paul Fodor, that returns a
